Prod/src/objects/SST_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Ohio_v__c</fullName>
        <label>Ohio v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oklahoma_Filing_Frequency__c</fullName>
        <label>Oklahoma Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oklahoma_Registered__c</fullName>
        <label>Oklahoma - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oklahoma_Remote__c</fullName>
        <label>Oklahoma Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oklahoma_nv_reason__c</fullName>
        <label>Oklahoma nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oklahoma_v__c</fullName>
        <label>Oklahoma v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Non_Volunteer__c</fullName>
        <label>Reason for Non-Volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Place of Business</fullName>
                </value>
                <value>
                    <fullName>Payroll &gt; 50K</fullName>
                </value>
                <value>
                    <fullName>Property &gt; 50k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_Arkansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Arkansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Georgia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Georgia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Indiana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Indiana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Iowa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Iowa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Kansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Kansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Kentucky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Kentucky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Michigan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Michigan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Minnesota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Minnesota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Nebraska__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Nebraska</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Nevada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Nevada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_New_Jersey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg New Jersey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_North_Carolina__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg North Carolina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_North_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg North Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Ohio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Ohio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Oklahoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Oklahoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Rhode_Island__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Rhode Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_South_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg South Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Tennessee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Tennessee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Utah__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Utah</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Vermont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Vermont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Washington__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Washington</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_West_Virginia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg West Virginia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Wisconsin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Wisconsin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Wyoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg Wyoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_Arkansas__c</fullName>
        <label>(NA)Registered Arkansas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_with_the_SST_Governing_Board__c</fullName>
        <label>Registered with the SST Governing Board?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Effective_Date__c</fullName>
        <label>Registration Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Arkansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Arkansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Georgia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Georgia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Indiana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Indiana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Iowa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Iowa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Kansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Kansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Kentucky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Kentucky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Michigan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Michigan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Minnesota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Minnesota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Nebraska__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Nebraska</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Nevada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Nevada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_New_Jersey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote New Jersey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_North_Carolina__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote North Carolina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_North_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote North Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Ohio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Ohio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Oklahoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Oklahoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Rhode_Island__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Rhode Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_South_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote South Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Tennessee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Tennessee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Utah__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Utah</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Vermont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Vermont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Washington__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Washington</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_West_Virginia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote West Virginia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Wisconsin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Wisconsin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Wyoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Wyoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rhode_Island_Filing_Frequency__c</fullName>
        <label>Rhode Island Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rhode_Island_Registered__c</fullName>
        <label>Rhode Island - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rhode_Island_Remote__c</fullName>
        <label>Rhode Island Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rhode_Island_nv_reason__c</fullName>
        <label>Rhode Island nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rhode_Island_v__c</fullName>
        <label>Rhode Island v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_First_Name__c</fullName>
        <description>Full Name: First Name</description>
        <label>SP First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Last_Name__c</fullName>
        <description>Full Name: Last Name</description>
        <label>SP Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Middle_Name__c</fullName>
        <description>Full Name: Middle Name</description>
        <label>SP Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>seller ssn</description>
        <inlineHelpText>Do not allow SSN with first three digits of: 000, 666, 999
Do not allow SSN or FEIN to equal “123456789”, “111111111”, “222222222”, “333333333”, “444444444”, “555555555”, “666666666”, “777777777”, “888888888”, “999999999”, “000000000”, or “987654321”.</inlineHelpText>
        <label>SP SSN</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SSTOnboarding__c</fullName>
        <label>StateSelection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSTP_password__c</fullName>
        <label>SSTP password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SST_Identification_Number__c</fullName>
        <label>SST Identification Number</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SST_State_Selection__c</fullName>
        <label>(NA)SST_State_Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>North Dakota</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Rhode Island</fullName>
                </value>
                <value>
                    <fullName>South Dakota</fullName>
                </value>
                <value>
                    <fullName>Tennessee</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Vermont</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>West Virginia</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
                <value>
                    <fullName>Wyoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_Arkansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Arkansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Georgia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Georgia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Indiana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Indiana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Iowa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Iowa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Kansas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Kansas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Kentucky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Kentucky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Michigan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Michigan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Minnesota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Minnesota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Nebraska__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Nebraska</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Nevada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Nevada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_New_Jersey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS New Jersey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_North_Carolina__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS North Carolina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_North_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS North Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Ohio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Ohio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Oklahoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Oklahoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Rhode_Island__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Rhode Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_South_Dakota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS South Dakota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Tennessee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Tennessee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Utah__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Utah</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Vermont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Vermont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Washington__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Washington</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_West_Virginia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS West Virginia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Wisconsin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Wisconsin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Wyoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS Wyoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_mailing_address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Same as mailing address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>South_Dakota_Filing_Frequency__c</fullName>
        <label>South Dakota Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>South_Dakota_Registered__c</fullName>
        <label>South Dakota- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>South_Dakota_Remote__c</fullName>
        <label>South Dakota Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>South_Dakota_nv_reason__c</fullName>
        <label>South Dakota nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>South_Dakota_v__c</fullName>
        <label>South Dakota v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Incorporation_or_Organization__c</fullName>
        <label>State of Incorporation or Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennessee_Filing_Frequency__c</fullName>
        <label>Tennessee Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennessee_Registered__c</fullName>
        <label>Tennessee - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennessee_Remote__c</fullName>
        <label>Tennessee Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennessee_nv_reason__c</fullName>
        <label>Tennessee nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennessee_v__c</fullName>
        <label>Tennessee v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Selling Organization</fullName>
                </value>
                <value>
                    <fullName>Manufacturer Organization</fullName>
                </value>
                <value>
                    <fullName>Retail Organization</fullName>
                </value>
                <value>
                    <fullName>Service Organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Product_and_Services__c</fullName>
        <label>Type of Product and Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Utah_Filing_Frequency__c</fullName>
        <label>Utah Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utah_Registered__c</fullName>
        <label>Utah - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utah_Remote__c</fullName>
        <label>Utah Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utah_nv_reason__c</fullName>
        <label>Utah nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utah_v__c</fullName>
        <label>Utah v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_Filing_Frequency__c</fullName>
        <label>Vermont Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_Registered__c</fullName>
        <label>Vermont- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_Remote__c</fullName>
        <label>Vermont Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_nv_reason__c</fullName>
        <label>Vermont nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_v__c</fullName>
        <label>Vermont v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_Filing_Frequency__c</fullName>
        <label>Washington Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_Registered__c</fullName>
        <label>Washington- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_Remote__c</fullName>
        <label>Washington Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_monthly_WA_B_O__c</fullName>
        <label>Washington monthly WA B&amp;O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_nv_reason__c</fullName>
        <label>Washington nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washington_v__c</fullName>
        <label>Washington v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>West_Virginia_Filing_Frequency__c</fullName>
        <label>West Virginia Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>West_Virginia_Registered__c</fullName>
        <label>West Virginia- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
</CustomObject>